--- a/iOS_Aura/Base.lproj/Test.storyboard
+++ b/iOS_Aura/Base.lproj/Test.storyboard
@@ -56,8 +56,12 @@
                                         <rect key="frame" x="182" y="76" width="73" height="30"/>
                                         <state key="normal" title="btn3"/>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VIG-eT-OUG">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VIG-eT-OUG">
                                         <rect key="frame" x="182" y="9" width="73" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="73" id="j4o-8t-lOr"/>
+                                            <constraint firstAttribute="height" constant="30" id="tBm-tn-gjo"/>
+                                        </constraints>
                                         <state key="normal" title="btn1"/>
                                     </button>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Tiw-sy-231">
@@ -78,7 +82,7 @@
                                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ZC2-zq-Djm">
                                                         <rect key="frame" x="56" y="0.0" width="85" height="30"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                        <textInputTraits key="textInputTraits"/>
+                                                        <textInputTraits key="textInputTraits" enablesReturnKeyAutomatically="YES"/>
                                                     </textField>
                                                 </subviews>
                                             </stackView>
@@ -103,7 +107,7 @@
                                                                     <constraint firstAttribute="width" constant="85" id="Wod-eS-fYY"/>
                                                                 </constraints>
                                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                                <textInputTraits key="textInputTraits"/>
+                                                                <textInputTraits key="textInputTraits" enablesReturnKeyAutomatically="YES"/>
                                                             </textField>
                                                         </subviews>
                                                     </stackView>
@@ -127,7 +131,7 @@
                                                             <constraint firstAttribute="width" constant="85" id="UXE-s4-6h0"/>
                                                         </constraints>
                                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                        <textInputTraits key="textInputTraits"/>
+                                                        <textInputTraits key="textInputTraits" enablesReturnKeyAutomatically="YES"/>
                                                     </textField>
                                                 </subviews>
                                             </stackView>
@@ -174,19 +178,43 @@
                                             </label>
                                         </subviews>
                                     </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oGj-yq-hhY">
+                                        <rect key="frame" x="455" y="18" width="78" height="21"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Iter:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tzq-zP-iFx">
+                                                <rect key="frame" x="0.0" y="0.0" width="30" height="21"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0/0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HKS-iu-FcJ">
+                                                <rect key="frame" x="30" y="0.0" width="48" height="21"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="48" id="aWR-wh-FfQ"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
                                 </subviews>
                                 <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstItem="uTR-OW-C1P" firstAttribute="trailing" secondItem="YZX-EK-M13" secondAttribute="trailingMargin" id="2Qb-7l-U3w"/>
                                     <constraint firstAttribute="bottom" secondItem="Tiw-sy-231" secondAttribute="bottom" constant="13" id="Fbj-yL-zyr"/>
+                                    <constraint firstItem="reA-RH-gtd" firstAttribute="leading" secondItem="oGj-yq-hhY" secondAttribute="trailing" constant="8" id="HWq-Gs-A4Q"/>
                                     <constraint firstItem="Tiw-sy-231" firstAttribute="top" secondItem="YZX-EK-M13" secondAttribute="top" constant="13" id="SJq-pQ-3ER"/>
                                     <constraint firstItem="vQe-iH-MDN" firstAttribute="leading" secondItem="Tiw-sy-231" secondAttribute="trailing" constant="33" id="YSo-hg-6M9"/>
                                     <constraint firstItem="uTR-OW-C1P" firstAttribute="top" secondItem="reA-RH-gtd" secondAttribute="bottom" constant="4" id="Zyj-MF-VZw"/>
                                     <constraint firstItem="uTR-OW-C1P" firstAttribute="top" secondItem="vQe-iH-MDN" secondAttribute="top" id="bgw-6m-29W"/>
+                                    <constraint firstItem="oGj-yq-hhY" firstAttribute="top" secondItem="reA-RH-gtd" secondAttribute="top" id="dYc-QT-Zeb"/>
                                     <constraint firstItem="uTR-OW-C1P" firstAttribute="bottom" secondItem="Tiw-sy-231" secondAttribute="bottom" id="huR-Bk-bfo"/>
                                     <constraint firstItem="Tiw-sy-231" firstAttribute="leading" secondItem="YZX-EK-M13" secondAttribute="leading" constant="8" id="nM8-Xj-8pp"/>
                                     <constraint firstAttribute="height" constant="116" id="nTc-Em-eqm"/>
+                                    <constraint firstItem="oGj-yq-hhY" firstAttribute="bottom" secondItem="VIG-eT-OUG" secondAttribute="bottom" id="pjx-gd-38p"/>
                                     <constraint firstAttribute="trailing" secondItem="reA-RH-gtd" secondAttribute="trailing" constant="8" id="qZv-Tl-bsC"/>
+                                    <constraint firstItem="VIG-eT-OUG" firstAttribute="leading" secondItem="Tiw-sy-231" secondAttribute="trailing" constant="33" id="uXV-Bv-z3I"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -209,6 +237,7 @@
                         <outlet property="btn2" destination="vQe-iH-MDN" id="LvM-EH-3Cq"/>
                         <outlet property="btn3" destination="lqF-RS-XeF" id="BN4-iU-RJd"/>
                         <outlet property="errCountLabel" destination="ed7-ie-mZ8" id="Dhv-hh-Dnq"/>
+                        <outlet property="iterCountLabel" destination="HKS-iu-FcJ" id="x5V-sw-394"/>
                         <outlet property="outputTextView" destination="g1a-UC-Q9O" id="PsQ-fL-6AL"/>
                         <outlet property="rightBarButtonItem" destination="Yl9-CB-gCp" id="NC3-G7-jky"/>
                         <outlet property="startButton" destination="VG6-za-Bqq" id="aK3-aL-qPJ"/>
