--- a/iOS_Aura/Base.lproj/Main.storyboard
+++ b/iOS_Aura/Base.lproj/Main.storyboard
@@ -383,21 +383,27 @@
                                             <constraint firstAttribute="height" constant="17" id="3Ci-dh-Akx"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
-                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="IP" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sMD-TH-JbM">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="LAN IP" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sMD-TH-JbM" userLabel="LAN IP Address Label">
                                         <rect key="frame" x="20" y="151" width="226" height="17"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="17" id="l6M-z8-rXv"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
-                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Y1O-DF-GFi">
-                                        <rect key="frame" x="532" y="125" width="60" height="30"/>
-                                        <state key="normal" title="AutoTest"/>
+                                        <rect key="frame" x="522" y="152" width="70" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="Op5-5p-hpo"/>
+                                            <constraint firstAttribute="width" constant="70" id="mGc-xo-L1F"/>
+                                        </constraints>
+                                        <state key="normal" title="AutoTest">
+                                            <color key="titleColor" red="0.1141904071" green="0.49319788809999998" blue="0.079485878349999997" alpha="1" colorSpace="calibratedRGB"/>
+                                        </state>
                                         <connections>
                                             <segue destination="ncm-l0-4MD" kind="presentation" identifier="toLanModeTest" id="JqG-dh-EAY"/>
                                         </connections>
@@ -408,10 +414,12 @@
                                     <constraint firstItem="sMD-TH-JbM" firstAttribute="leading" secondItem="ubm-gd-mCl" secondAttribute="leading" constant="20" id="9bu-18-Xt9"/>
                                     <constraint firstItem="Odc-pR-3lK" firstAttribute="top" secondItem="5QJ-DO-unj" secondAttribute="bottom" constant="4" id="CYp-dC-bbd"/>
                                     <constraint firstItem="Ws5-uR-nUu" firstAttribute="leading" secondItem="ubm-gd-mCl" secondAttribute="leading" constant="20" id="DdE-UV-NQ4"/>
+                                    <constraint firstAttribute="bottom" secondItem="Y1O-DF-GFi" secondAttribute="bottom" constant="8" id="HVN-7u-BFe"/>
                                     <constraint firstItem="j7R-kf-4QG" firstAttribute="leading" secondItem="ubm-gd-mCl" secondAttribute="leading" constant="20" id="PJh-hf-Biu"/>
                                     <constraint firstItem="9AV-Wd-cgd" firstAttribute="leading" secondItem="ubm-gd-mCl" secondAttribute="leading" constant="20" id="Ru6-OW-1eb"/>
                                     <constraint firstItem="sMD-TH-JbM" firstAttribute="top" secondItem="9AV-Wd-cgd" secondAttribute="bottom" constant="4" id="V6n-hi-9YF"/>
                                     <constraint firstItem="ebP-an-ueG" firstAttribute="top" secondItem="ubm-gd-mCl" secondAttribute="top" constant="8" id="XXC-YQ-uCf"/>
+                                    <constraint firstAttribute="trailing" secondItem="Y1O-DF-GFi" secondAttribute="trailing" constant="8" id="Xor-LP-FV6"/>
                                     <constraint firstItem="j7R-kf-4QG" firstAttribute="top" secondItem="Ws5-uR-nUu" secondAttribute="bottom" constant="4" id="boQ-80-ro4"/>
                                     <constraint firstItem="5QJ-DO-unj" firstAttribute="leading" secondItem="ubm-gd-mCl" secondAttribute="leading" constant="20" id="cg1-69-UcD"/>
                                     <constraint firstItem="Odc-pR-3lK" firstAttribute="leading" secondItem="ubm-gd-mCl" secondAttribute="leading" constant="20" id="igq-TQ-e6p"/>
@@ -427,13 +435,13 @@
                                     </mask>
                                 </variation>
                                 <connections>
-                                    <outlet property="connectivityLabel" destination="Odc-pR-3lK" id="jic-bh-x1O"/>
-                                    <outlet property="dsnLabel" destination="5QJ-DO-unj" id="NU0-i8-VbE"/>
-                                    <outlet property="ipAddressLabel" destination="sMD-TH-JbM" id="IIZ-Yb-Hwp"/>
-                                    <outlet property="macAddressLabel" destination="9AV-Wd-cgd" id="PjY-2Z-xoG"/>
-                                    <outlet property="modelLabel" destination="j7R-kf-4QG" id="RWQ-O1-Ve9"/>
-                                    <outlet property="nameLabel" destination="ebP-an-ueG" id="rKX-Uc-wQQ"/>
-                                    <outlet property="oemModelLabel" destination="Ws5-uR-nUu" id="Ct7-os-dQV"/>
+                                    <outlet property="connectivityLabel" destination="Odc-pR-3lK" id="nJ8-v9-0Fo"/>
+                                    <outlet property="dsnLabel" destination="5QJ-DO-unj" id="45c-li-o0u"/>
+                                    <outlet property="lanIPAddressLabel" destination="sMD-TH-JbM" id="51D-XY-Vtg"/>
+                                    <outlet property="macAddressLabel" destination="9AV-Wd-cgd" id="8Aj-3P-FXv"/>
+                                    <outlet property="modelLabel" destination="j7R-kf-4QG" id="gdg-aO-alE"/>
+                                    <outlet property="nameLabel" destination="ebP-an-ueG" id="dAU-W3-97s"/>
+                                    <outlet property="oemModelLabel" destination="Ws5-uR-nUu" id="Bxt-2e-F8C"/>
                                 </connections>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="75" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Ap0-u1-kSG">
@@ -465,7 +473,7 @@
                                                                 <constraint firstAttribute="width" constant="128" id="wZc-mi-BZs"/>
                                                             </constraints>
                                                             <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
-                                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                             <nil key="highlightedColor"/>
                                                             <variation key="default">
                                                                 <mask key="constraints">
@@ -660,7 +668,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="e6D-nJ-c4F"/>
                     <connections>
-                        <outlet property="panelView" destination="ubm-gd-mCl" id="iVX-PF-nJ8"/>
+                        <outlet property="panelView" destination="ubm-gd-mCl" id="umj-w1-nPv"/>
                         <outlet property="tableView" destination="Ap0-u1-kSG" id="ptA-gD-Aqn"/>
                         <segue destination="aPG-sC-KdD" kind="show" identifier="toPropertyView" id="RqI-EY-fwQ"/>
                     </connections>
