Adds LAN and DSS labels to device panel view.  Highlight state changes based on property value

--- a/iOS_Aura/Base.lproj/Main.storyboard
+++ b/iOS_Aura/Base.lproj/Main.storyboard
@@ -387,8 +387,8 @@
                                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="LAN IP" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.80000000000000004" translatesAutoresizingMaskIntoConstraints="NO" id="sMD-TH-JbM" userLabel="LAN IP Address Label">
-                                        <rect key="frame" x="20" y="151" width="250" height="17"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="LAN IP: XXX.XXX.XXX.XXX" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.80000000000000004" translatesAutoresizingMaskIntoConstraints="NO" id="sMD-TH-JbM" userLabel="LAN IP Address Label">
+                                        <rect key="frame" x="20" y="151" width="208" height="17"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="17" id="l6M-z8-rXv"/>
                                         </constraints>
@@ -396,29 +396,52 @@
                                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="DSS" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1zk-ra-Geo">
+                                        <rect key="frame" x="565" y="145" width="27" height="21"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="27" id="TJc-zX-2kM"/>
+                                            <constraint firstAttribute="height" constant="21" id="qkH-7E-OkJ"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue-CondensedBlack" family="Helvetica Neue" pointSize="15"/>
+                                        <color key="textColor" red="0.42467421293258667" green="0.42466151714324951" blue="0.42466866970062256" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="LAN" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="foY-TL-5d5">
+                                        <rect key="frame" x="565" y="124" width="27" height="21"/>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue-CondensedBlack" family="Helvetica Neue" pointSize="15"/>
+                                        <color key="textColor" red="0.42467421290000001" green="0.4246615171" blue="0.4246686697" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                 </subviews>
                                 <constraints>
                                     <constraint firstItem="Ws5-uR-nUu" firstAttribute="top" secondItem="Odc-pR-3lK" secondAttribute="bottom" constant="4" id="10x-ga-KgB"/>
                                     <constraint firstItem="9AV-Wd-cgd" firstAttribute="width" secondItem="5QJ-DO-unj" secondAttribute="width" id="45G-Wh-1RA"/>
                                     <constraint firstItem="Odc-pR-3lK" firstAttribute="width" secondItem="ebP-an-ueG" secondAttribute="width" id="4d7-wV-X6V"/>
+                                    <constraint firstAttribute="trailing" secondItem="1zk-ra-Geo" secondAttribute="trailing" constant="8" id="6SC-Qc-IJ1"/>
                                     <constraint firstItem="sMD-TH-JbM" firstAttribute="leading" secondItem="ubm-gd-mCl" secondAttribute="leading" constant="20" id="9bu-18-Xt9"/>
                                     <constraint firstItem="Ws5-uR-nUu" firstAttribute="width" secondItem="5QJ-DO-unj" secondAttribute="width" id="A0a-rd-zdE"/>
                                     <constraint firstItem="ebP-an-ueG" firstAttribute="trailing" secondItem="5QJ-DO-unj" secondAttribute="trailing" id="Bkn-rW-k4k"/>
                                     <constraint firstItem="Odc-pR-3lK" firstAttribute="top" secondItem="5QJ-DO-unj" secondAttribute="bottom" constant="4" id="CYp-dC-bbd"/>
                                     <constraint firstItem="Ws5-uR-nUu" firstAttribute="leading" secondItem="ubm-gd-mCl" secondAttribute="leading" constant="20" id="DdE-UV-NQ4"/>
+                                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="1zk-ra-Geo" secondAttribute="bottom" constant="12" id="GJf-Af-W7m"/>
                                     <constraint firstItem="Odc-pR-3lK" firstAttribute="width" secondItem="5QJ-DO-unj" secondAttribute="width" id="KRZ-fi-MqZ"/>
                                     <constraint firstItem="j7R-kf-4QG" firstAttribute="leading" secondItem="ubm-gd-mCl" secondAttribute="leading" constant="20" id="PJh-hf-Biu"/>
                                     <constraint firstItem="9AV-Wd-cgd" firstAttribute="leading" secondItem="ubm-gd-mCl" secondAttribute="leading" constant="20" id="Ru6-OW-1eb"/>
-                                    <constraint firstItem="sMD-TH-JbM" firstAttribute="width" secondItem="5QJ-DO-unj" secondAttribute="width" id="Tem-th-itE"/>
+                                    <constraint firstItem="sMD-TH-JbM" firstAttribute="width" secondItem="5QJ-DO-unj" secondAttribute="width" constant="-42" id="Tem-th-itE"/>
                                     <constraint firstItem="sMD-TH-JbM" firstAttribute="top" secondItem="9AV-Wd-cgd" secondAttribute="bottom" constant="4" id="V6n-hi-9YF"/>
+                                    <constraint firstItem="1zk-ra-Geo" firstAttribute="baseline" secondItem="sMD-TH-JbM" secondAttribute="baseline" id="Wkz-VA-yRN"/>
                                     <constraint firstItem="ebP-an-ueG" firstAttribute="top" secondItem="ubm-gd-mCl" secondAttribute="top" constant="8" id="XXC-YQ-uCf"/>
                                     <constraint firstItem="j7R-kf-4QG" firstAttribute="width" secondItem="5QJ-DO-unj" secondAttribute="width" id="bFS-ea-i65"/>
                                     <constraint firstItem="j7R-kf-4QG" firstAttribute="top" secondItem="Ws5-uR-nUu" secondAttribute="bottom" constant="4" id="boQ-80-ro4"/>
                                     <constraint firstItem="5QJ-DO-unj" firstAttribute="leading" secondItem="ubm-gd-mCl" secondAttribute="leading" constant="20" id="cg1-69-UcD"/>
+                                    <constraint firstItem="1zk-ra-Geo" firstAttribute="height" secondItem="foY-TL-5d5" secondAttribute="height" id="dXh-cN-9y1"/>
                                     <constraint firstItem="Ws5-uR-nUu" firstAttribute="width" secondItem="ebP-an-ueG" secondAttribute="width" id="fWn-eI-0yl"/>
                                     <constraint firstItem="Odc-pR-3lK" firstAttribute="leading" secondItem="ubm-gd-mCl" secondAttribute="leading" constant="20" id="igq-TQ-e6p"/>
                                     <constraint firstItem="Odc-pR-3lK" firstAttribute="width" secondItem="5QJ-DO-unj" secondAttribute="width" id="joN-QP-Bg9"/>
+                                    <constraint firstAttribute="trailing" secondItem="foY-TL-5d5" secondAttribute="trailing" constant="8" id="l4M-RB-RSe"/>
+                                    <constraint firstItem="1zk-ra-Geo" firstAttribute="top" secondItem="foY-TL-5d5" secondAttribute="bottom" id="n2n-q0-Y7e"/>
                                     <constraint firstItem="9AV-Wd-cgd" firstAttribute="top" secondItem="j7R-kf-4QG" secondAttribute="bottom" constant="4" id="nVh-Nr-00f"/>
+                                    <constraint firstItem="1zk-ra-Geo" firstAttribute="width" secondItem="foY-TL-5d5" secondAttribute="width" id="ppW-ub-0ux"/>
                                     <constraint firstItem="j7R-kf-4QG" firstAttribute="width" secondItem="5QJ-DO-unj" secondAttribute="width" id="qgR-fj-Ghc"/>
                                     <constraint firstItem="ebP-an-ueG" firstAttribute="leading" secondItem="ubm-gd-mCl" secondAttribute="leading" constant="12" id="rNM-Bw-pp1"/>
                                     <constraint firstItem="5QJ-DO-unj" firstAttribute="top" secondItem="ebP-an-ueG" secondAttribute="bottom" constant="8" id="vMW-FZ-blM"/>
@@ -437,7 +460,9 @@
                                 <connections>
                                     <outlet property="connectivityLabel" destination="Odc-pR-3lK" id="nJ8-v9-0Fo"/>
                                     <outlet property="dsnLabel" destination="5QJ-DO-unj" id="45c-li-o0u"/>
+                                    <outlet property="dssActiveLabel" destination="1zk-ra-Geo" id="Fs1-4t-5li"/>
                                     <outlet property="lanIPAddressLabel" destination="sMD-TH-JbM" id="51D-XY-Vtg"/>
+                                    <outlet property="lanModeActiveLabel" destination="foY-TL-5d5" id="qAa-Mn-iI4"/>
                                     <outlet property="macAddressLabel" destination="9AV-Wd-cgd" id="8Aj-3P-FXv"/>
                                     <outlet property="modelLabel" destination="j7R-kf-4QG" id="gdg-aO-alE"/>
                                     <outlet property="nameLabel" destination="ebP-an-ueG" id="dAU-W3-97s"/>
